yoshimi 1.5.11 M

2019-6-4 Will
* Completed CLI bank slot deletions.
  Also integrated GUI controls.

2019-6-3 Will
* CLI can now delete bank slot instruments.
  Notifications not complete yet.
* Updated docs.

2019-6-3 Will
* Applied modulation patch from Kristian.
* BugFix: Message list clearing was too agressive.
  This prevented state loads from including mide-learn
  control names.
* BugFix: Load instrument by name failed for yoshi type.
  Unless there was also a zyn type.

2019-6-1 Will
* Corrected ringbufer size calculation.

2019-5-31 Will
* Merged in bank and program improvements.
  Separated out:
  Load instrument by name
  Load instrument from bank
  Set current root or bank
  Updated docs
* Additional code and doc cleanups.

2019-5-29 Will
* BugFix: Several bad integer types for BSD
* BugFix: CLI not seeing MIDI program changes.

2019-5-27 Will
* BugFix: Start message lockup only on Gnome or KDE

2019-5-26 Will
* BugFix: CLI load MIDI-learn list from history failed.
* Moved some parameters out of par2.
* Updated docs.

2019-5-25 Will
* Enabled part level sound cutoff instead of -40db.
* Doc updates in dev_notes.

2019-5-22 Will
* BugFix: Midi CCs not updating GUI.

2019-5-21 Will
* Fixed regression not muting when loading patch sets.
* Resolved spurious EQ setting message when loading.
* Rearanged 'type' bits removing doubling up.
  This also permitted streamlining of much of the code.
* Remove or commented redundant test routines and info.

2019-5-20 Will
* GUI updates almost complete.
* Corrected date of previous commit.
* Fixed regression effects preset colour not changing.
* Updates completed :)
  'parameters' no longer doubles up for routing.

  'type' no longer carries sources.
  It currently has three spare bits but they will be
  used to remove the doubling up of some functions.

  'source' has up to 14 unique IDs + all and none.
  It also now carries routing information and has
  one spare bit.

  The control block has three spare bytes.